# todo_app

./: README.md
todo_app/: Cargo.toml
todo_app/entity/src/: tasks.rs
todo_app/migration/src/: lib.rs  m20240307_162300_create_tasks_table.rs  main.rs
todo_app/src/: main.rs  pool.rs
